# TrainingProject

./: .gitignore  Note  build.gradle  settings.gradle  utils.gradle  utils1.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/c/: filelib.h  jnilog.c  jnilog.h  native-c.h
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/avilib/: buffqueue.cpp  buffqueue.h  openes_player.cpp  openes_player.h  platform.h
app/src/main/cpp/avilib/libtc/: cfgfile.c  cfgfile.h  framecode.c  iodir.c  iodir.h  libtc.h  optstr.c  ratiocodes.c  ratiocodes.h  static_optstr.h  static_tclist.h  static_tctimer.h  static_xio.h  xio.h  (+21 more)
app/src/main/cpp/bsdiff/: bsdiff.c  bsdiff.h  bspatch.c  bspatch.h  patch.c  patch.h
app/src/main/cpp/c/: filelib.c  jnilog.c  jnilog.h  native-c.c  posix_thread.c  posix_thread.h
app/src/main/cpp/hotfix/: native-fix.c  native-fix.h
app/src/main/java/: leon_training_thread_jniposix_Client.h
app/src/main/res/drawable/: btn_shape.xml
app/src/main/res/layout/: activity_a.xml  activity_databinding.xml  activity_main.xml  activity_mvp_design.xml  activity_rv_databinding.xml  activity_rv_databinding_item.xml  activity_touch.xml  fragment_adapter_layout.xml  fragment_algorithm_layout.xml  fragment_broadcast_layout.xml  fragment_databinding_layout.xml  fragment_decorator_layout.xml  fragment_dynamic_proxy_layout.xml  fragment_forkjoin_layout.xml  fragment_function_aidl_layout.xml  fragment_function_init_layout.xml  fragment_function_multipleextends_layout.xml  fragment_function_volatile_layout.xml  fragment_jni_posix_layout.xml  fragment_lambda_layout.xml  fragment_launch_mode_layout.xml  fragment_leak_layout.xml  fragment_main.xml  fragment_memory_layout.xml  fragment_multi_thread_layout.xml  fragment_ndk_hotfix_layout.xml  fragment_ndk_layout.xml  fragment_ndk_openes_layout.xml  fragment_ndk_patch_layout.xml  fragment_ndk_splits_merge_layout.xml  fragment_network_layout.xml  fragment_proxy_layout.xml  fragment_rx_layout.xml  fragment_structure_layout.xml  fragment_thread_dead_lock_layout.xml  fragment_thread_layout.xml  fragment_trycatch_layout.xml  fragment_view_layout.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
(+296 files in other folders)
